--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-color: #646464;
+  background-color: #0d1321;
 }
 
 .title-header {
@@ -26,12 +26,44 @@ body {
   flex-wrap: wrap; /* para que maneje la parte de responsive y se ponga una debajo de la otra a la hora de achicar la pagina */
   justify-content: center;
 }
+/*informacion, titulos placa y fecha y hora */
+.info-type-time {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
 
+.name-list-vehicle {
+  margin: 0 auto 0 auto;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+}
+
+.name-data-vehicle {
+  margin: 0 auto 0 auto;
+  color: white;
+}
+
+/* datos de placa ingresados por el usuario  */
+
+.vehicle {
+  color: white;
+  padding: 5px;
+  border: 1px solid #0d1321;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+
+/* sombra y margen de la card */
 .card {
-  width: 450px;
+  width: 400px;
   margin: 50px;
   padding: 20px;
-  border: solid 1px;
   border-radius: 15px;
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 5);
   background: rgba(255, 255, 255, 0.1);
@@ -95,11 +127,11 @@ input {
 
 /* Ventana o caja modal */
 .modal-content {
-  background-color: rgba(0, 0, 0, 0.918);
+  background-color: #1d2d44;
   width: 600px;
   padding: 40px 50px;
   border-radius: 15px;
-  border: solid 1px;
+
   position: relative; /* Relativo con respecto al contenedor -modal- */
   margin: auto; /* Centrada */
 }
